Fixed table styling on Safari

--- a/themes/studio-fika/assets/scss/table.scss
+++ b/themes/studio-fika/assets/scss/table.scss
@@ -19,6 +19,9 @@ table {
         tr {
             @include dotted-border($width: 1px, $type: 'bottom', $color: '4');
 
+            display: flex;
+            justify-content: space-between;
+
             &:last-child:not(:only-child) {
                 &::after {
                     display: none;
